hphp/test/slow/container-ref-init/array-init2.php.expectf

Fatal error: Value of collection element cannot be marked as reference in %s/array-init2.php on line 7
